--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,26 @@
 <resources>
     <string name="app_name">Work1.1</string>
-    <string name="is_equal">НАЖМИ</string>
-    <string name="result">Результат</string>
-    <string name="editText1">Поле ввода</string>
-    <string name="switch1">Переключатель</string>
-    <string name="checkBox1">Галочка</string>
-    <string name="button2">НАЖМИ СЮДА ТОЖЕ</string>
+    <string name="butt1">1</string>
+    <string name="butt2">2</string>
+    <string name="butt3">3</string>
+    <string name="butt4">4</string>
+    <string name="butt5">5</string>
+    <string name="butt6">6</string>
+    <string name="butt7">7</string>
+    <string name="butt8">8</string>
+    <string name="butt9">9</string>
+    <string name="butt0">0</string>
+    <string name="buttPt">.</string>
+    <string name="buttPlus">+</string>
+    <string name="buttMinus">-</string>
+    <string name="buttMultiply">*</string>
+    <string name="buttDivide">/</string>
+    <string name="buttPercent">%</string>
+    <string name="buttClear">CL</string>
+    <string name="buttResult">=</string>
+    <string name="textViewResult"></string>
 
-    <string name="text">Text Input</string>
-    <string name="phone">Phone Input</string>
-    <string name="number">Number Input</string>
-    <string name="textPersonName">Person Name Input</string>
-    <string name="textPassword">Password Input</string>
-    <string name="textEmail">Email Input</string>
 
-    <string name="emsExpl">ems в TextView задает ширину поля, равную ширине определенного кол-ва символов "M". Т.е. если ems = 5, то ширина поля будет равна ширине надписи "МММММ".</string>
 
 
 </resources>
