added all options of button click action realization, parcelization implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="_0">0</string>
     <string name="counter_1">Counter on click</string>
     <string name="counter_2">Counter click listener</string>
+    <string name="counter_4">Counter listener field</string>
 
 
 </resources>
